fix(cover): gap between title elements, line-height

--- a/styles/style.css
+++ b/styles/style.css
@@ -89,15 +89,19 @@
 .cover__title {
   z-index: 1;
   position: relative;
-  padding: 8px 50px 0;
+  padding: 0 50px;
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 20px;
   line-height: 1;
   font-size: 100px;
   font-weight: 700;
   letter-spacing: 30px;
   text-transform: uppercase;
+}
+
+.cover__title-text:first-of-type {
+  line-height: 1.15;
 }
 
 .cover__description {
